--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,23 +1,24 @@
 {
   "name": "bs-uuid",
   "version": "0.3.1",
-  "sources": [{
-    "dir" : "src",
-    "subdirs" : true
-  }, {
-    "dir": "__tests__",
-    "type": "dev"
-  }],
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dev-dependencies": [
-    "@glennsl/bs-jest"
-  ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "warnings": {
-    "error" : "+101"
+    "error": "+101"
   },
   "namespace": true,
   "refmt": 3
